# nitwit-validator

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .graphml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  cwvalidator.c  cwvalidator.cpp  main.c  main.cpp  nitwit.sh  program_state.cpp  program_state.hpp  run-tests-gitlab.sh  run-tests.sh  test-gitlab.sh  test.sh  validate.sh
bench/: .gitignore  bench_config.py  bench_error_analysis.py  bench_error_counter.py  bench_parallel.py  bench_results_analysis.py  data.csv  data_2020.csv  data_2021.csv  data_2022.csv  exec_single.py  filter-witnesses.py  filter_results.py  notes.md  slurm-parallel.sh  validator_analysis.py  venn.diagram.r  venn.diagram_2020.r  venn.diagram_2021.r  venn.diagram_2022.r  witness_analysis.py
bench/common/: utils.py
bench/configs/: all_extracted.json  c_i_matched.json  cil_matched.json  matching_with_extr_reach_witnesses.json  reachability.json  reachability_bitfields.json  reachability_divinesmt.json  reachability_symbiotic.json  reachability_systems64.json  reachability_timeouts.json  reachability_timeouts_terminating.json  reachability_veriabs.json  reachability_witnesses_with_producers.json  reachability_witnesses_with_producers_illegal_char.json  reachability_witnesses_with_producers_no_killed.json  testing.json  testing_config.json
bench/output/: bad_type_declaration_fptrs.json  bitfields.json  dont_run.json  goto_label_not_found.json  last_stdout.txt  matching.json  nontermination.json  reachability_divinesmt.json  reachability_killed.json  reachability_kojak.json  reachability_symbiotic.json  reachability_symbiotic_bp.json  reachability_symbiotic_nv.json  reachability_symbiotic_v.json  reachability_witnesses_with_producers_illegal_char.json  regression_tests.json  timeouts.json  unbounded.json  unknown_termination.json
bench/output/best/: .non_validated_witnesses.json.swo  .non_validated_witnesses.json.swp  badly_parsed_witnesses.json  non_validated_witnesses.json  (+1 more)
bench/svcomp/: artifact_License.txt  artifact_Readme.txt.md  bench-def-test.xml  bench-def.xml  cwvalidator.py  cwvalidator.xml  nitwit.py  nitwit.xml  tool_info.py  val_nitwit.py
bench/todo/: Incorrectly non-validated
picoc/: AssignT.hpp  BaseType.cpp  BaseType.hpp  CoerceT.hpp  ResolveVariable.hpp  RunMode.hpp  Shadows.hpp  ValueByType.hpp  assumption_expr.c  assumption_expr.cpp  clibrary.c  clibrary.cpp  debug.c  debug.cpp  expression.c  expression.cpp  expression_template.hpp  heap.cpp  include.c  include.cpp  interpreter.h  interpreter.hpp  lex.c  lex.cpp  lextoken.hpp  parse.c  parse.cpp  picoc.c  picoc.cpp  picoc.h  picoc.hpp  platform.c  platform.cpp  platform.h  platform.hpp  table.c  table.cpp  type.c  type.cpp  values.cpp  (+4 more)
picoc/cstdlib/: assert.c  assert.cpp  ctype.cpp  errno.cpp  math.c  math.cpp  stdbool.cpp  stdio.c  stdio.cpp  stdlib.c  stdlib.cpp  string.cpp  time.c  time.cpp  unistd.c  unistd.cpp
picoc/platform/: library_unix.cpp  platform_unix.c  platform_unix.cpp
picoc/veriflib/: verif.c  verif.cpp
scripts/: pack.sh
test/: 00.test.c  00.test.cpa.c.graphml  00.test.simple.c  00.test.simple.cpa.c.graphml  01.test.c  01.test.cpa.c.graphml  02.test.c  02.test.cpa.c.graphml
test-bench/: bench.py  bench_parallel.py  bench_results_analysis.py  exec_single.py  filter-witnesses.py
test-bench/common/: utils.py
testfiles/: 00.basic.c  00.basic.cpa.c.graphml  00.basic.cpa.i.graphml  00.basic.i  00.basic.witness.graphml  01.assume.c  01.assume.witness.graphml  02.array.cbmc.c.graphml  02.array.cbmc.c.graphml.invalid  02.array.cpa.c.graphml  02.array.cpa.graphml  02.array.cpa.i.graphml  02.array.i  03.typedef.c  03.typedef.cpa.c.graphml  03.typedef.cpa.i.graphml  03.typedef.i  04.gcc.attribute.c  04.gcc.attribute.cbmc.c.graphml  05.exitdef.c  05.exitdef.fix-cbmc.c.graphml  06.nondet.c  06.nondet.cpa.c.graphml  06.nondet.fix-cbmc.c.graphml  06.nondet2.cpa.c.graphml  06.nondet2.fix-cbmc.c.graphml  07.nondet.assumption.c  07.nondet.assumption.cbmc.c.graphml  07.nondet.assumption.cpa.c.graphml  08.nondet.assumption2.c  08.nondet.assumption2.cbmc.c.graphml  10.initializer.cbmc.c.graphml  11.func.ptrs.c  11.func.ptrs.cbmc.c.graphml  12.func.ptrs.parsing.c  12.func.ptrs.parsing.cbmc.c.graphml  12.func.ptrs.parsing.cpa.c.graphml  13.goto.1.c  13.goto.1.cbmc.c.graphml  13.goto.1.cpa.c.graphml  (+39 more)
testfiles/NDArrayTestcases/: dArray_with_init.c  dArray_with_init.graphml  dArray_without_init.c  dArray_without_init.graphml  ndArray_with_init.c  ndArray_with_init.graphml  ndArray_without_init.c  ndArray_without_init.graphml  ndArray_without_init2.c  ndArray_without_init2.graphml
testfiles/sv-comp-2019/: 00.basic.c  00.basic.cbmc.c.graphml  01.assume.cbmc.c.graphml  01.assume.cpa.c.graphml  02.array.c  03.typedef.c  05.exitdef.c  05.exitdef.cpa.c.graphml  06.nondet.fix-cbmc.c.graphml  06.nondet2.c  06.nondet2.cpa.c.graphml  07.nondet.assumption.fix-cbmc.c.graphml  08.nondet.assumption2.cpa.c.graphml  09.assert.c  09.assert.cbmc.c.graphml  10.initializer.c  10.initializer.cpa.c.graphml  11.func.ptrs.cbmc.c.graphml  11.func.ptrs.cpa.c.graphml  12.func.ptrs.parsing.cbmc.c.graphml  12.func.ptrs.parsing.cpa.c.graphml  14.fptrs.struct.cbmc.c.graphml  14.fptrs.struct.cpa.c.graphml  16.shadowing.c  16.shadowing.mine.c.graphml  17.ternary.c  17.ternary.cbmc.c.graphml  17.ternary.cpa.c.graphml  18.array.size.cbmc.c.graphml.invalid  19.array.c  19.array.skink.c.graphml  20.struct.init.pinaka.c.graphml  21.bitfield.cbmc.c.graphml.invalid  21.bitfield.cpa.c.graphml  22.bitfield.c  22.bitfield.cbmc.c.graphml  22.bitfield.cpa.c.graphml  23.thesis.gcl.c  24.const.ignore.c  25.branch.cpa.c.graphml  (+19 more)
tests/: bracket_error.c  bracket_error.graphml  bracket_test.c  bracket_test.graphml  zerostruct.c  zerostruct.c.cpa.graphml
utils/: extern_verif_defs.hpp  files.c  files.cpp  files.h  files.hpp
utils/pugixml/: pugixml.cpp  pugixml.hpp
witness/: automaton.c  automaton.cpp  automaton.h  automaton.hpp  automaton_parse.cpp  automaton_parse.hpp  automaton_run.cpp  witness.c  witness.cpp  witness.h  witness.hpp
(+117 files in other folders)
